Fix contrast of fieldsets in dark mode

--- a/src/textual_paint/paint.css
+++ b/src/textual_paint/paint.css
@@ -360,6 +360,9 @@ DialogWindow .buttons Button {
     height: auto;
     border: round black;
 }
+.-dark-mode .fieldset {
+    border: round white;
+}
 
 #flip_rotate_dialog RadioSet {
     layout: vertical;
